minor code change